k8s/app/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
  labels:
    app: spring-lab2
    type: app
spec:
  selector:
    matchLabels:
      app: spring-lab2
      type: app
  template:
    metadata:
      name: spring-backend
      labels:
        app: spring-lab2
        type: app
    spec:
      containers:
        - name: backend
          imagePullPolicy: IfNotPresent
          image: lab2spring:0.3.0
          ports:
            - containerPort: 8080
              protocol: TCP
              name: backend-main
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 5
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
    type: RollingUpdate
